--- a/CodeMethodeCISLHF.ipynb
+++ b/CodeMethodeCISLHF.ipynb
@@ -6,7 +6,8 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+yx6h5nVHp/cY6dy4yheQ",
+      "mount_file_id": "1Lzu20Ky7hMI4geLQbHCi9qkjb7Nj7Cqj",
+      "authorship_tag": "ABX9TyO8wDilsYu8/ksyE/F3Gj78",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,94 +32,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Dissimulation du message**"
+        "# **Dissimulation du message**"
       ],
       "metadata": {
         "id": "GEKS5Wx3Z2rH"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import cv2\n",
-        "import numpy as np\n",
-        "from google.colab import files\n",
-        "import io\n",
-        "\n",
-        "def cover_image_preparation(cover_picture, m, n):\n",
-        "    cover_segments = []\n",
-        "    for i in range(0, cover_picture.shape[0], m):\n",
-        "        for j in range(0, cover_picture.shape[1], n):\n",
-        "            segment = cover_picture[i:i+m, j:j+n]\n",
-        "            lowest_value = np.min(segment)\n",
-        "            highest_value = np.max(segment)\n",
-        "            cover_segments.append((lowest_value, highest_value))\n",
-        "    return cover_segments\n",
-        "\n",
-        "\n",
-        "def normalize_image(image, target_size=(512, 512)):\n",
-        "    return cv2.resize(image, target_size, interpolation=cv2.INTER_AREA)\n",
-        "\n",
-        "def secret_data_preparation(secret_data, num_segments):\n",
-        "    binary_secret_data = ''.join(format(ord(char), '07b') for char in secret_data)\n",
-        "    # Ajouter des zéros à la fin pour atteindre la longueur requise\n",
-        "    while len(binary_secret_data) < num_segments * 2:  # Multiplié par 2 pour prendre en compte les deux bits par segment\n",
-        "        binary_secret_data += '0'\n",
-        "    return binary_secret_data\n",
-        "\n",
-        "\n",
-        "\n",
-        "def mapping(cover_segments, binary_secret_data, mapping_key):\n",
-        "    mapping_flags = []\n",
-        "    for i, (lowest, highest) in enumerate(cover_segments):\n",
-        "        mapped_bit = int(not (int(binary_secret_data[i]) ^ ((highest & 128) >> 7)))\n",
-        "        mapping_flags.append(mapped_bit)\n",
-        "    return mapping_flags\n",
-        "\n",
-        "def embed_message(cover_image, secret_data, m, n, mapping_key):\n",
-        "    cover_segments = cover_image_preparation(cover_image, m, n)\n",
-        "\n",
-        "    # Ajouter le nombre total de segments comme argument pour la préparation des données secrètes\n",
-        "    binary_secret_data = secret_data_preparation(secret_data, len(cover_segments))\n",
-        "\n",
-        "    mapping_flags = mapping(cover_segments, binary_secret_data, mapping_key)\n",
-        "\n",
-        "    stego_image = np.copy(cover_image)\n",
-        "\n",
-        "    for i, (lowest, highest) in enumerate(cover_segments):\n",
-        "        stego_image[i // (cover_image.shape[1] // n), i % (cover_image.shape[1] // n)] = (stego_image[i // (cover_image.shape[1] // n), i % (cover_image.shape[1] // n)] & ~1) | mapping_flags[i]\n",
-        "\n",
-        "    return stego_image\n",
-        "\n",
-        "# Charger l'image de couverture depuis l'ordinateur local\n",
-        "uploaded = files.upload()\n",
-        "cover_image_path = list(uploaded.keys())[0]\n",
-        "cover_image_data = uploaded[cover_image_path]\n",
-        "cover_image = cv2.imdecode(np.frombuffer(cover_image_data, np.uint8), cv2.IMREAD_GRAYSCALE)\n",
-        "\n",
-        "# Vérifier si la lecture de l'image a réussi\n",
-        "if cover_image is None:\n",
-        "    print(\"Erreur: Impossible de lire l'image de couverture.\")\n",
-        "else:\n",
-        "    # Données secrètes à dissimuler\n",
-        "    secret_data = \"Hello, Mr EWOLO !\"\n",
-        "\n",
-        "    # Paramètres pour la méthode CIHLHF\n",
-        "    m = 4\n",
-        "    n = 4\n",
-        "    mapping_key = [7, 8, 1, 2, 3, 4, 6, 5]\n",
-        "\n",
-        "    # Dissimuler le message dans l'image de couverture\n",
-        "    stego_image = embed_message(cover_image, secret_data, m, n, mapping_key)\n",
-        "\n",
-        "    # Enregistrer l'image stéganographique\n",
-        "    cv2.imwrite(\"/content/stego_image1.jpg\", stego_image)\n"
-      ],
-      "metadata": {
-        "id": "JXgkJd7dWwyh"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -185,7 +103,7 @@
         "    print(\"Erreur: Impossible de lire l'image de couverture.\")\n",
         "else:\n",
         "    # Données secrètes à dissimuler\n",
-        "    secret_data = \"Hello, Mr EWOLO !\"\n",
+        "    secret_data = \"Hello Mr EWOLO \"\n",
         "\n",
         "    # Paramètres pour la méthode CIHLHF\n",
         "    m = 4\n",
@@ -195,11 +113,14 @@
         "    # Dissimuler le message dans l'image de couverture\n",
         "    stego_image = embed_message(cover_image, secret_data, m, n, mapping_key)\n",
         "\n",
-        "    # Enregistrer l'image stéganographique\n",
-        "    cv2.imwrite(\"/content/stego_image_normalized.jpg\", stego_image)\n"
+        "    # Enregistrer l'image stéganographique avec un nom différent à chaque itération\n",
+        "    for i in range(1, 2):  # Changer la plage selon le nombre d'itérations souhaité\n",
+        "        stego_image_path = f\"/content/stego_image_normalized_{i}.jpg\"\n",
+        "        cv2.imwrite(stego_image_path, stego_image)\n",
+        "        print(f\"Image stéganographique enregistrée : {stego_image_path}\")\n"
       ],
       "metadata": {
-        "id": "vLOOd6Ohvmss"
+        "id": "46Z1sQCNEMLR"
       },
       "execution_count": null,
       "outputs": []
@@ -207,10 +128,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Afficher l'image Stégo"
+        "***Affichage de l'image stégo***"
       ],
       "metadata": {
-        "id": "5f7YtsvsYEBF"
+        "id": "uvni5WOHLlFo"
       }
     },
     {
@@ -220,7 +141,7 @@
         "from matplotlib import pyplot as plt\n",
         "\n",
         "# Charger l'image stéganographique\n",
-        "stego_image_path = \"/content/stego_image_normalized.jpg\"\n",
+        "stego_image_path = \"/content/stego_image_normalized_1.jpg\"\n",
         "stego_image = cv2.imread(stego_image_path, cv2.IMREAD_GRAYSCALE)\n",
         "\n",
         "# Vérifier si la lecture de l'image a réussi\n",
@@ -234,7 +155,7 @@
         "    plt.show()\n"
       ],
       "metadata": {
-        "id": "_VK2vq9qYCtH"
+        "id": "vIX3GEDDLTtj"
       },
       "execution_count": null,
       "outputs": []
@@ -242,7 +163,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Afficher les dimmenssions de l'image stégo"
+        "***Afficher les dimmenssions de l'image stégo***"
       ],
       "metadata": {
         "id": "qSYB3YC1d_dX"
@@ -262,22 +183,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Extracction du message**"
+        "# **Extraction du message secret**"
       ],
       "metadata": {
-        "id": "9RhNwsxNZcGB"
+        "id": "OHgteEOxHQUZ"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Code d'extraction du message secret"
-      ],
-      "metadata": {
-        "id": "a64S-M5Bhaxb"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -286,8 +196,8 @@
         "import numpy as np\n",
         "from google.colab import files\n",
         "\n",
-        "def normalize_image(image, target_size=(512, 512)):\n",
-        "    return cv2.resize(image, target_size, interpolation=cv2.INTER_AREA)\n",
+        "def is_image_normalized(image, target_size=(512, 512)):\n",
+        "    return image.shape[:2] == target_size\n",
         "\n",
         "def cover_image_preparation(cover_picture, m, n):\n",
         "    cover_segments = []\n",
@@ -300,25 +210,34 @@
         "    return cover_segments\n",
         "\n",
         "def extract_message(stego_image, m, n, mapping_key):\n",
-        "    stego_segments = cover_image_preparation(stego_image, m, n)\n",
-        "\n",
-        "    # Vérifier si les dimensions correspondent\n",
-        "    if len(stego_segments) != stego_image.size:\n",
-        "        print(\"Erreur: Les dimensions de l'image stéganographique ne correspondent pas.\")\n",
+        "    # Vérifier si l'image stéganographique est normalisée en 512x512\n",
+        "    if not is_image_normalized(stego_image):\n",
+        "        print(\"Erreur: L'image stéganographique n'est pas normalisée en 512x512.\")\n",
         "        return None\n",
+        "\n",
+        "    # Utiliser la fonction cover_image_preparation sur l'image stéganographique\n",
+        "    stego_segments = cover_image_preparation(stego_image, m, n)\n",
         "\n",
         "    extracted_binary_data = \"\"\n",
         "    for i, (lowest, highest) in enumerate(stego_segments):\n",
-        "        extracted_bit = (stego_image[i // m, i % n] & 1) ^ ((highest & 128) >> 7)\n",
+        "        row = i // (stego_image.shape[1] // n)\n",
+        "        col = i % (stego_image.shape[1] // n)\n",
+        "\n",
+        "        # Extraire le bit du bit de poids faible de l'image stéganographique\n",
+        "        extracted_bit = (stego_image[row * m:(row + 1) * m, col * n:(col + 1) * n] & 1)[0, 0]\n",
+        "\n",
+        "        # Appliquer le XOR avec le bit du bit de poids fort du segment\n",
+        "        extracted_bit ^= ((highest & 128) >> 7)\n",
+        "\n",
         "        extracted_binary_data += str(extracted_bit)\n",
         "\n",
-        "    # Convertir les données binaires extraites en ASCII\n",
-        "    extracted_message = \"\"\n",
-        "    for i in range(0, len(extracted_binary_data), 7):\n",
-        "        ascii_code = int(extracted_binary_data[i:i+7], 2)\n",
-        "        extracted_message += chr(ascii_code)\n",
-        "\n",
-        "    return extracted_message\n",
+        "    # Convertir les données binaires extraites en une chaîne Unicode avec gestion des erreurs\n",
+        "    try:\n",
+        "        unicode_data = bytes(int(extracted_binary_data[i:i+8], 2) for i in range(0, len(extracted_binary_data), 8)).decode(\"utf-8\", errors=\"ignore\")\n",
+        "        return unicode_data\n",
+        "    except ValueError as e:\n",
+        "        print(f\"Erreur de conversion vers UTF-8 : {e}\")\n",
+        "        return None\n",
         "\n",
         "# Charger l'image stéganographique depuis l'ordinateur local\n",
         "uploaded = files.upload()\n",
@@ -345,7 +264,53 @@
         "        print(\"Extraction du message échouée.\")\n"
       ],
       "metadata": {
-        "id": "Z5WvL8zpaRDq"
+        "id": "XkU9KDNrnDDv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "from matplotlib import pyplot as plt\n",
+        "\n",
+        "# Charger l'image stéganographique\n",
+        "stego_image_path = \"/content/stego_image_normalized_11.jpg\"\n",
+        "stego_image = cv2.imread(stego_image_path, cv2.IMREAD_GRAYSCALE)\n",
+        "\n",
+        "# Vérifier si la lecture de l'image a réussi\n",
+        "if stego_image is None:\n",
+        "    print(\"Erreur: Impossible de lire l'image stéganographique.\")\n",
+        "else:\n",
+        "    # Afficher l'image stéganographique\n",
+        "    plt.imshow(stego_image, cmap='gray')\n",
+        "    plt.title('Image stéganographique')\n",
+        "    plt.axis('off')\n",
+        "    plt.show()\n"
+      ],
+      "metadata": {
+        "id": "kE9sctNROhrX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Affichage les dimenssions du méssage secret***"
+      ],
+      "metadata": {
+        "id": "QPQ7mc88MA6g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Dimensions de l'image stéganographique:\", stego_image.shape)"
+      ],
+      "metadata": {
+        "id": "YjJfdBpcH3fD"
       },
       "execution_count": null,
       "outputs": []
@@ -367,6 +332,132 @@
       ],
       "metadata": {
         "id": "fmWy_kXXZ80Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Métriques d'évaluation**"
+      ],
+      "metadata": {
+        "id": "kj2wR2GLTjnR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**1. Distorsion Visuelle (MSE et PSNR)**"
+      ],
+      "metadata": {
+        "id": "bExJARDkzjWo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculez la MSE entre l'image originale et l'image stéganographique.\n",
+        "Calculez le PSNR en utilisant la formule PSNR = 10 * log10(max^2 / MSE), où max est la valeur maximale possible pour un pixel."
+      ],
+      "metadata": {
+        "id": "bF5DL_6Hz2Bs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "\n",
+        "# Chargez l'image originale et l'image stéganographique\n",
+        "original_image = cv2.imread(\"original_image.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+        "stego_image = cv2.imread(\"stego_image.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+        "\n",
+        "# Calculez la MSE\n",
+        "mse = np.sum((original_image - stego_image)**2) / float(original_image.size)\n",
+        "\n",
+        "# Calculez le PSNR\n",
+        "max_pixel_value = 255  # Pour une image en niveaux de gris\n",
+        "psnr = 10 * np.log10((max_pixel_value**2) / mse)\n",
+        "\n",
+        "print(f\"MSE: {mse}, PSNR: {psnr}\")\n"
+      ],
+      "metadata": {
+        "id": "2jgdQ1l6zrrn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**2. Capacité de Charge :**\n"
+      ],
+      "metadata": {
+        "id": "RRuTEPHkz-AV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Calculez la capacité de charge en bits par pixel (bpp) ou en pourcentage de la capacité totale de l'image."
+      ],
+      "metadata": {
+        "id": "ez6g7HhW0Cpk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calcul de la capacité de charge en bpp\n",
+        "capacity_bpp = (original_image.size * 2) / float(original_image.size)\n",
+        "\n",
+        "# Calcul de la capacité de charge en pourcentage\n",
+        "capacity_percentage = (capacity_bpp / (original_image.size * 8)) * 100\n",
+        "\n",
+        "print(f\"Capacité de charge (bpp): {capacity_bpp}, Capacité de charge (%): {capacity_percentage}%\")\n"
+      ],
+      "metadata": {
+        "id": "hwFOBTqd0HgU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**3. Robustesse :**"
+      ],
+      "metadata": {
+        "id": "DhGxRxVH0M30"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Appliquez des attaques à l'image stéganographique et évaluez la distorsion visuelle."
+      ],
+      "metadata": {
+        "id": "lMiXHiOi0Sn7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Appliquez une attaque (par exemple, filtrage)\n",
+        "filtered_stego_image = cv2.GaussianBlur(stego_image, (5, 5), 0)\n",
+        "\n",
+        "# Calculez la MSE et le PSNR après l'attaque\n",
+        "mse_filtered = np.sum((original_image - filtered_stego_image)**2) / float(original_image.size)\n",
+        "psnr_filtered = 10 * np.log10((max_pixel_value**2) / mse_filtered)\n",
+        "\n",
+        "print(f\"MSE après filtrage: {mse_filtered}, PSNR après filtrage: {psnr_filtered}\")\n"
+      ],
+      "metadata": {
+        "id": "nITsUPcY0Tn9"
       },
       "execution_count": null,
       "outputs": []
