--- a/CodeMethodeCISLHF.ipynb
+++ b/CodeMethodeCISLHF.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Lzu20Ky7hMI4geLQbHCi9qkjb7Nj7Cqj",
-      "authorship_tag": "ABX9TyO8wDilsYu8/ksyE/F3Gj78",
+      "authorship_tag": "ABX9TyMkwi000WEkat/o2RKXk6FM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -461,6 +461,63 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Résultats Expérimentaux et Comparaison**"
+      ],
+      "metadata": {
+        "id": "e0-zvk2_1EGn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Capacité de dissimulation**"
+      ],
+      "metadata": {
+        "id": "9tP-61EnKCVO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Données\n",
+        "methodes = ['CISFSA', 'CISMSB', 'CISLHF']\n",
+        "valeurs = [6272, 16384, 49152]\n",
+        "\n",
+        "# Couleurs pour chaque bande\n",
+        "couleurs = ['blue', 'orange', 'purple']\n",
+        "\n",
+        "# Création de l'histogramme\n",
+        "plt.bar(methodes, valeurs, color=couleurs)\n",
+        "\n",
+        "# Titres et labels\n",
+        "plt.title('Comparaison des Méthodes de Dissimulation sans Couverture')\n",
+        "plt.xlabel('Méthodes')\n",
+        "plt.ylabel('Capacité de dissimulation')\n",
+        "\n",
+        "# Limite de l'axe des ordonnées\n",
+        "plt.ylim(0, 60000)\n",
+        "\n",
+        "# Affichage de l'histogramme\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "tl2gnjsOIYNk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "3t4E88rqE_OT"
+      }
     }
   ]
 }
