--- a/CodeMethodeCISLHF.ipynb
+++ b/CodeMethodeCISLHF.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Lzu20Ky7hMI4geLQbHCi9qkjb7Nj7Cqj",
-      "authorship_tag": "ABX9TyMkwi000WEkat/o2RKXk6FM",
+      "authorship_tag": "ABX9TyPkN+U0OpFjJSRxfkbRP+Fq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -496,18 +496,455 @@
         "plt.bar(methodes, valeurs, color=couleurs)\n",
         "\n",
         "# Titres et labels\n",
-        "plt.title('Comparaison des Méthodes de Dissimulation sans Couverture')\n",
-        "plt.xlabel('Méthodes')\n",
+        "plt.title('Comparaison des approches de Dissimulation sans Couverture')\n",
+        "plt.xlabel('Approches')\n",
         "plt.ylabel('Capacité de dissimulation')\n",
         "\n",
         "# Limite de l'axe des ordonnées\n",
         "plt.ylim(0, 60000)\n",
+        "\n",
+        "plt.legend()  # Ajout de la légende\n",
         "\n",
         "# Affichage de l'histogramme\n",
         "plt.show()\n"
       ],
       "metadata": {
         "id": "tl2gnjsOIYNk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Robusteste a la stéganalyse**"
+      ],
+      "metadata": {
+        "id": "0YcGyakoDI1T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from mpmath import mp\n",
+        "\n",
+        "def factorial_mpmath(n):\n",
+        "    return mp.factorial(n)\n",
+        "\n",
+        "# Exemple d'utilisation\n",
+        "Factoriel_Ci = factorial_mpmath(4096)\n",
+        "#Factoriel_Ci_moins_Ti = factorial_mpmath(2176)      #CISFSA\n",
+        "#Factoriel_Ci_moins_Ti = factorial_mpmath(12288)     #CISMSB\n",
+        "Factoriel_Ci_moins_Ti = factorial_mpmath(45056)      #CISLHF\n",
+        "print(Factoriel_Ci)\n",
+        "print(Factoriel_Ci_moins_Ti)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1b-bVuQcDSvi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from mpmath import mp\n",
+        "\n",
+        "def factorial_mpmath(n):\n",
+        "    return mp.factorial(n)\n",
+        "\n",
+        "# Exemple d'utilisation\n",
+        "n = 45056\n",
+        "result = factorial_mpmath(n)\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "id": "fffGU6MlDGSM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Calucul de  U = (Ci)/(Ci - Ti)*\n"
+      ],
+      "metadata": {
+        "id": "-gSszdsykrQY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " U = (Factoriel_Ci)/(Factoriel_Ci_moins_Ti)\n",
+        "\n",
+        " print(U)\n"
+      ],
+      "metadata": {
+        "id": "5F8YbS9sjZeB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Si 1 année = 31 536 000 et Si on supose qu'un ordi peut effectuer 10 milliards de calcul par seconde on à :*"
+      ],
+      "metadata": {
+        "id": "hh2HrK4hnnzf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Ta =  U/10000000000*31536000\n",
+        "print(Ta)"
+      ],
+      "metadata": {
+        "id": "HlstqNWpoBOO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "valeur = 2.677970601261345874129473882520175739261151616687221140096331508487336177053589811695653198311516811e-177098\n",
+        "annees = math.log(valeur) / math.log(10)\n",
+        "\n",
+        "print(annees)\n"
+      ],
+      "metadata": {
+        "id": "vI2-rs3X_NeZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "2mVI-X_kn9BW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from mpmath import mp\n",
+        "\n",
+        "# Configuration de la précision\n",
+        "mp.dps = 1000000000000000000000\n",
+        "\n",
+        "# Données\n",
+        "approches = ['CISFSA', 'CIHMSB', 'CIHLHF']\n",
+        "temps_annee = [mp.mpf('1.86e6697'), mp.mpf('4.80e31901'), mp.mpf('2.67e177098')]\n",
+        "\n",
+        "# Création de la courbe\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.bar(approches, temps_annee, color=['blue', 'orange', 'green'])\n",
+        "plt.yscale('log')  # Échelle logarithmique pour mieux visualiser les différences\n",
+        "\n",
+        "# Ajout de labels et titres\n",
+        "plt.title('Temps nécessaire par année pour une attaque de force brute')\n",
+        "plt.xlabel('Approche')\n",
+        "plt.ylabel('Temps nécessaire par année (log scale)')\n",
+        "\n",
+        "# Affichage de la courbe\n",
+        "plt.show()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "r_1p8CDMd226"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from mpmath import mp\n",
+        "\n",
+        "# Configuration de la précision\n",
+        "mp.dps = 100\n",
+        "\n",
+        "# Données\n",
+        "annees = np.arange(1, 31)  # Par exemple, de 1 à 30 ans\n",
+        "approches = ['CISFSA', 'CIHMSB', 'CIHLHF']\n",
+        "temps_annee = [\n",
+        "    [mp.mpf(f'1.86e{6697 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'4.80e{31901 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'2.67e{177098 + annee}') for annee in annees]\n",
+        "]\n",
+        "\n",
+        "# Création des courbes\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "for i, approche in enumerate(approches):\n",
+        "    plt.plot(annees, temps_annee[i], label=approche)\n",
+        "\n",
+        "# Échelle logarithmique pour mieux visualiser les différences\n",
+        "plt.yscale('log')\n",
+        "\n",
+        "# Ajout de labels et titres\n",
+        "plt.title('Évolution du temps nécessaire par année pour une attaque de force brute')\n",
+        "plt.xlabel('Années')\n",
+        "plt.ylabel('Temps nécessaire par année (log scale)')\n",
+        "plt.legend()  # Ajout de la légende\n",
+        "\n",
+        "# Affichage du graphique\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "x7cY3syQv-H8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from mpmath import mp\n",
+        "\n",
+        "# Configuration de la précision\n",
+        "mp.dps = 100\n",
+        "\n",
+        "# Données\n",
+        "annees = np.arange(1, 31)  # Par exemple, de 1 à 30 ans\n",
+        "approches = ['CISFSA', 'CIHMSB', 'CIHLHF']\n",
+        "temps_annee = [\n",
+        "    [mp.mpf(f'1.86e{6697 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'4.80e{31901 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'2.67e{177098 + annee}') for annee in annees]\n",
+        "]\n",
+        "\n",
+        "# Création des courbes\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "for i, approche in enumerate(approches):\n",
+        "    plt.plot(temps_annee[i], annees, label=approche)\n",
+        "\n",
+        "# Échelle logarithmique pour mieux visualiser les différences\n",
+        "plt.xscale('log')\n",
+        "\n",
+        "# Ajout de labels et titres\n",
+        "plt.title('Évolution du temps nécessaire par année pour une attaque de force brute')\n",
+        "plt.ylabel('Années')\n",
+        "plt.xlabel('Temps nécessaire par année (log scale)')\n",
+        "plt.legend()  # Ajout de la légende\n",
+        "\n",
+        "# Affichage du graphique\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "06WoV_upwtHi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from mpmath import mp\n",
+        "\n",
+        "# Configuration de la précision\n",
+        "mp.dps = 100\n",
+        "\n",
+        "# Données\n",
+        "annees = np.arange(1, 31)  # Par exemple, de 1 à 30 ans\n",
+        "approches = ['CISFSA', 'CIHMSB', 'CIHLHF']\n",
+        "temps_annee = [\n",
+        "    [mp.mpf(f'1.86e{6697 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'4.80e{31901 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'2.67e{177098 + annee}') for annee in annees]\n",
+        "]\n",
+        "\n",
+        "# Création des histogrammes\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "for i, approche in enumerate(approches):\n",
+        "    plt.barh(annees, temps_annee[i], label=approche)\n",
+        "\n",
+        "# Ajout de labels et titres\n",
+        "plt.title('Temps nécessaire par année pour une attaque de force brute')\n",
+        "plt.xlabel('Temps nécessaire par année (log scale)')\n",
+        "plt.ylabel('Années')\n",
+        "plt.legend()  # Ajout de la légende\n",
+        "\n",
+        "# Affichage du graphique\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "Cy44xqhSxBKj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from mpmath import mp\n",
+        "\n",
+        "# Configuration de la précision\n",
+        "mp.dps = 100\n",
+        "\n",
+        "# Données\n",
+        "annees = np.arange(1, 31)  # Par exemple, de 1 à 30 ans\n",
+        "approches = ['CISFSA', 'CIHMSB', 'CIHLHF']\n",
+        "temps_annee = [\n",
+        "    [mp.mpf(f'1.86e{6697 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'4.80e{31901 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'2.67e{177098 + annee}') for annee in annees]\n",
+        "]\n",
+        "\n",
+        "# Création des histogrammes\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "bar_width = 0.25  # Largeur des barres\n",
+        "\n",
+        "for i, approche in enumerate(approches):\n",
+        "    plt.barh(annees + i * bar_width, temps_annee[i], height=bar_width, label=approche)\n",
+        "\n",
+        "# Ajout de labels et titres\n",
+        "plt.title('Temps nécessaire par année pour une attaque de force brute')\n",
+        "plt.xlabel('Temps nécessaire par année (log scale)')\n",
+        "plt.ylabel('Approches')\n",
+        "plt.legend()  # Ajout de la légende\n",
+        "\n",
+        "# Affichage du graphique\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "0DucsgdGyFv0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from mpmath import mp\n",
+        "\n",
+        "# Configuration de la précision\n",
+        "mp.dps = 100\n",
+        "\n",
+        "# Données\n",
+        "annees = np.arange(1, 31)  # Par exemple, de 1 à 30 ans\n",
+        "approches = ['CISFSA', 'CIHMSB', 'CIHLHF']\n",
+        "temps_annee = [\n",
+        "    [mp.mpf(f'1.86e{6697 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'4.80e{31901 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'2.67e{177098 + annee}') for annee in annees]\n",
+        "]\n",
+        "\n",
+        "# Création des courbes\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "\n",
+        "for i, approche in enumerate(approches):\n",
+        "    plt.plot(annees, temps_annee[i], label=approche)\n",
+        "\n",
+        "# Échelle logarithmique pour mieux visualiser les différences\n",
+        "plt.yscale('log')\n",
+        "\n",
+        "# Ajout de labels et titres\n",
+        "plt.title('Évolution du temps nécessaire par année pour une attaque de force brute')\n",
+        "plt.xlabel('Années')\n",
+        "plt.ylabel('Temps nécessaire par année (log scale)')\n",
+        "plt.legend()  # Ajout de la légende\n",
+        "\n",
+        "# Affichage du graphique\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "X8rT-epKyzMC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from mpmath import mp\n",
+        "\n",
+        "# Configuration de la précision\n",
+        "mp.dps = 100\n",
+        "\n",
+        "# Données\n",
+        "annees = np.arange(1, 31)  # Par exemple, de 1 à 30 ans\n",
+        "approches = ['CISFSA', 'CIHMSB', 'CIHLHF']\n",
+        "temps_annee = [\n",
+        "    [mp.mpf(f'1.86e{6697 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'4.80e{31901 + annee}') for annee in annees],\n",
+        "    [mp.mpf(f'2.67e{177098 + annee}') for annee in annees]\n",
+        "]\n",
+        "\n",
+        "# Création de l'histogramme cumulé\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "\n",
+        "for i, approche in enumerate(approches):\n",
+        "    plt.bar(annees, np.cumsum(temps_annee[i]), label=approche, alpha=0.7)\n",
+        "\n",
+        "# Ajout de labels et titres\n",
+        "plt.title('Histogramme cumulé du temps nécessaire par année pour une attaque de force brute')\n",
+        "plt.xlabel('Années')\n",
+        "plt.ylabel('Temps nécessaire cumulé par année (log scale)')\n",
+        "plt.legend()  # Ajout de la légende\n",
+        "\n",
+        "# Affichage du graphique\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "xBca337o7yrC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Données\n",
+        "methodes = ['CISFSA', 'CISMSB', 'CISLHF']\n",
+        "valeurs = [1.86*10**6697, 4.83 * 10**31916, 2.69 * 10**77113]\n",
+        "\n",
+        "# Couleurs pour chaque bande\n",
+        "couleurs = ['blue', 'orange', 'purple']\n",
+        "\n",
+        "# Création de l'histogramme\n",
+        "plt.bar(methodes, valeurs, color=couleurs)\n",
+        "\n",
+        "# Titres et labels\n",
+        "plt.title('Comparaison des approches de Dissimulation sans Couverture')\n",
+        "plt.xlabel('Approches')\n",
+        "plt.ylabel('Capacité de dissimulation')\n",
+        "\n",
+        "\n",
+        "plt.legend()  # Ajout de la légende\n",
+        "\n",
+        "# Limite de l'axe des ordonnées\n",
+        "plt.ylim(0, 60 000 0000)\n",
+        "\n",
+        "# Affichage de l'histogramme\n",
+        "plt.show()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Cq7r2QlA8DTp"
       },
       "execution_count": null,
       "outputs": []
